[tool.poetry]
name = "aiogram-courses"
version = "0.1.0"
description = ""
authors = ["Ilya <airscods@gmail.com>"]
readme = "README.md"
packages = [{include = "aiogram_courses"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.24"
python-dotenv = "^0.21.1"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
